add logo and preliminary theming

--- a/web/themes/contrib/jethro/templates/menu--main.html.twig
+++ b/web/themes/contrib/jethro/templates/menu--main.html.twig
@@ -47,7 +47,11 @@
   {% endmacro %}
 </div>
 <div class="logo-box">
-  <div id="site-logo">
+  <div class="col-xs-12 col-sm-12 hidden-md hidden-lg hidden-xl" id="site-logo">
+    <a href="http://marceliotstein.marceliotstein.net/" title="Home" rel="home" class="site-logo"><img class="img-responsive" src="/themes/contrib/jethro/images/peacebrain992.png" alt="Pacifism21.org" /></a>
+  </div>
+</div>
+  <div class="hidden-xs hidden-sm col-md-12" id="site-logo">
     <a href="http://marceliotstein.marceliotstein.net/" title="Home" rel="home" class="site-logo"><img class="img-responsive" src="/themes/contrib/jethro/images/peacebrain1200.png" alt="Pacifism21.org" /></a>
   </div>
 </div>
