--- a/web/themes/contrib/jethro/templates/page.html.twig
+++ b/web/themes/contrib/jethro/templates/page.html.twig
@@ -228,10 +228,8 @@
         {{ page.footer_bottom }}
       {% endif %}
       <div class="clearfix"></div>
-      <div class="col-md-8 credit-block">
-        <div class="pull-left powered-by-block">
-          <p>{{ 'Jethro ported to Drupal by'|t }} <a href="http://dropthemes.in" target="_blank">DropThemes.in</a></p>
-        </div>
+      <div class="col-md-8 footer-main">
+        Pacifism21.org: Pacifism for the 21st Century
       </div>
       <div class="col-md-4 social-link-block">
         {{ socialicons |raw }}
